# fastnx

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md
gaphor/: Kernel, KProcess, PID.gaphor
notes/: Nintendo Store Format (NSP).md
notes/.obsidian/: workspace.json
notes/TODO/: Files, Formats Support, Loaders.md
source/: CMakeLists.txt  fastnx.cpp
source/base/: container.h
source/common/: allocators.cpp  allocators.h  async_logger.cpp  async_logger.h  bytes.h  container.h  debug_memory.cpp  debug_memory.h  exception.h  format.h  main.cpp  memory.cpp  memory.h  traits.h  types.h  values.h
source/core/: CMakeLists.txt  app_setup.cpp  app_setup.h  application.cpp  application.h  assets.cpp  assets.h  cache.cpp  cache.h  games_lists.cpp  games_lists.h  tarball.cpp  tarball.h
source/crypto/: aes_cipher.cpp  aes_cipher.h  checksum.cpp  checksum.h  hashsum.cpp  hashsum.h  integrity.cpp  pki_nca.cpp  safe_aes.cpp  safe_aes.h  ticket.cpp  ticket.h  types.h
source/debug/: process_calltracer.cpp  process_calltracer.h  readonly_buffer.cpp  readonly_buffer.h
source/device/: arch_aspect.cpp  arch_aspect.h  capabilities.h  memory.cpp  memory.h  pages.cpp  processor.cpp  syslimits.cpp
source/fs_sys/: CMakeLists.txt  assets.cpp  assets.h  cnmt.cpp  cnmt.h  contains.cpp  ctr_file.cpp  ctr_file.h  filters.cpp  fsio.cpp  fullpath.cpp  games_lists.cpp  games_lists.h  linkable_directory.cpp  linkable_directory.h  match.cpp  nacp.cpp  nacp.h  npdm.cpp  npdm.h  offset_file.cpp  offset_file.h  regex_file.cpp  regex_file.h  standard_file.cpp  standard_file.h  types.h  xts_file.cpp  xts_file.h
source/fs_sys/aes/: ctr_file.cpp  ctr_file.h  xts_file.cpp  xts_file.h
source/fs_sys/nx_fmt/: content_archive.cpp  content_archive.h  partition_filesystem.cpp  partition_filesystem.h  romfs.cpp  romfs.h  submission_package.cpp  submission_package.h
source/fs_sys/refs/: buffered_file.cpp  buffered_file.h  directory_file_access.cpp  directory_file_access.h  editable_directory.cpp  editable_directory.h  huge_file.cpp  huge_file.h
source/fs_sys/ssd/: buffered_file.cpp  buffered_file.h  editable_directory.cpp  editable_directory.h  solid_directory.cpp  solid_directory.h
source/fs_sys/vfs/: offset_file.cpp  offset_file.h  regex_file.cpp  regex_file.h  standard_file.cpp  standard_file.h
source/gtk/: CMakeLists.txt
source/horizon/: key_set.cpp  key_set.h  nx_apps.cpp  nx_apps.h  process_loader.cpp  process_loader.h  switch_ns.cpp  switch_ns.h
source/jit/: CMakeLists.txt  arm_debug.cpp  arm_debug.h  dynarmic_callbacks.cpp  dynarmic_callbacks.h  dynarmic_jit.cpp  dynarmic_jit.h  page_table.cpp  page_table.h  scoped_signal_handler.cpp  scoped_signal_handler.h  types.h
source/jit/analyzer/: irs_blow.cpp
source/kernel/: kauto_object.cpp  kauto_object.h  kernel.cpp  kernel.h  kernelctx.cpp  kernelctx.h  ksynchronization_object.cpp  ksynchronization_object.h  pid.cpp  routines.cpp  types.h
source/kernel/dram/: device_lpddr4.cpp  device_lpddr4.h
source/kernel/memory/: device_lpddr4.cpp  device_lpddr4.h  device_memory.cpp  device_memory.h  k_memory.cpp  k_memory.h  kmemory_block_manager.cpp  kmemory_block_manager.h  kpage_table.cpp  kpage_table.h  kslab_heap.cpp  kslab_heap.h  ktls_pagemanager.cpp  ktls_pagemanager.h
source/kernel/svc/: memory.cpp  syscall.cpp  syscall.h  syscall_table.cpp  types.h
source/kernel/threads/: kscheduler.cpp  kscheduler.h
source/kernel/types/: khandle_table.cpp  khandle_table.h  kprocess.cpp  kprocess.h  kthread.cpp  kthread.h
source/loaders/: app_types.cpp  application_directory.cpp  application_directory.h  gamefs.cpp  gamefs.h  homefs.cpp  homefs.h  nso_fmt.cpp  nso_fmt.h  nsoexe.cpp  nsoexe.h  nsp_es.cpp  nsp_es.h  romdir_mkfs.cpp  romdir_mkfs.h  types.h
source/procrt/: spin_lock.cpp  spin_lock.h
source/runtime/: entropy.cpp  entropy.h  lossless.cpp  lossless.h  spin_lock.cpp  spin_lock.h
